# GameOfLife_QML

./: CMakeLists.txt  Cell.cpp  Cell.hpp  TableModel.cpp  TableModel.hpp  main.cpp  main.qml
